# periphilia

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  earthquake.in  earthquake.py  gnome-gamepads.in
data/: AboutDialog.ui.in  ElementWidget.ui  Makefile.am  app-menu.ui  earthquake.appdata.xml.in  earthquake.desktop.in  earthquake.gresource.xml  gnome-gamepads.appdata.xml.in  gnome-gamepads.desktop.in  gnome-gamepads.gresource  gnome-gamepads.gresource.xml  headerbar.ui  icon.xcf  org.gnome.Gamepads.gschema.xml  org.gstreamer.Earthquake.gschema.xml
po/: POTFILES.in  POTFILES.skip
src/: Makefile.am  application.py  devices.py  plugin.py  searchbar.py  toolbar.py  view.py  window.py
